// Vitest Snapshot v1

exports[`JS based CJS > GIVEN no plugin options THEN injects version 1`] = `
"\\"use strict\\";

// tests/fixtures/build-in/javascript.cjs
module.exports = {
  version: \\"1.0.2\\"
};
"
`;

exports[`JS based CJS > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"\\"use strict\\";

// tests/fixtures/build-in/javascript.cjs
module.exports = {
  version: \\"2022-02-01T14:30:30.000Z\\"
};
"
`;
